# Mechanistic-Interpretation-Material-Inference

./: .gitignore  README.md
mimi/: README.md  pyproject.toml
mimi/checkpoints/: helper_save.py
mimi/data/: tr_data_type.csv
mimi/data/examples_100/: arg_ins_100.csv  arg_pred_gen_100.csv  arg_substitution_100.csv  argument_insertion.csv  argument_predicate_generalisation.csv  argument_substitution.csv  cond_frame_100.csv  conditional_frame_insertion_substitution.csv  example.csv  example_100.csv  frame_conj_100.csv  frame_conjunction.csv  frame_sub_100.csv  frame_substitution.csv  if_then.csv  if_then_100.csv  predicate_substitution.csv  property_inheritance.csv  property_inheritance_100.csv
mimi/src/mimi/: data_exploration.ipynb
mimi/src/mimi/utils/: global_variables.py  helper_functions.py  prepare_dataset.py
