 [build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mimi"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "torch==2.6.0",
  "plotly==5.24.1",
  "numpy==2.0.2",
  "nbformat==5.10.4",
  "kaleido==0.2.1",
  "transformer_lens==2.11.0"
]

[tool.hatch.envs.test]
dependencies = [
  "jupyter"
]

[project.urls]
Documentation = "https://github.com/U.N. Owen/mimi#readme"
Issues = "https://github.com/U.N. Owen/mimi/issues"
Source = "https://github.com/U.N. Owen/mimi"

[tool.hatch.version]
path = "src/mimi/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/mimi tests}"

[tool.coverage.run]
source_pkgs = ["mimi", "tests"]
branch = true
parallel = true
omit = [
  "src/mimi/__about__.py",
]

[tool.coverage.paths]
mimi = ["src/mimi", "*/mimi/src/mimi"]
tests = ["tests", "*/mimi/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
